# OS-lyre

./: .gitignore  GNUmakefile  README.md  jinx-config-debug
.github/workflows/: check.yml  nightly.yml
base-files/etc/: group  hostname  passwd
base-files/root/: readnvme.c
build-support/: CMakeToolchain.txt  checkstripped.sh  jinx2bpkgdb.sh  limine.cfg  makeiso.sh
host-recipes/: binutils  cmake  gcc  gcc-compiler  libgcc  libstdc++  limine  pkg-config
init/: GNUmakefile  init.c
kernel/: .gitignore  GNUmakefile.in  bootstrap  configure.ac  cross_file.txt  gensyms.sh  initramfs.c  initramfs.h  kernel.c  linker-x86_64.ld
kernel/acpi/: acpi.c  acpi.h  acpi.k.h  madt.c  madt.h  madt.k.h
kernel/dev/: dev.c  dev.h  dev.k.h  ioapic.c  ioapic.k.h  lapic.c  lapic.h  lapic.k.h  pci.c  pci.h  pci.k.h  pit.c  pit.h  pit.k.h  ps2.c  ps2.h  ps2.k.h
kernel/dev/char/: console.c  console.h  console.k.h  mouse.c  mouse.h  mouse.k.h  serial.c  serial.h  serial.k.h  streams.c  streams.h  streams.k.h
kernel/dev/net/: loopback.c  loopback.h  loopback.k.h  net.c  net.h  net.k.h
kernel/dev/net/intel/: 8254x.c  e1000.h  e1000.k.h
kernel/dev/storage/: partition.c  partition.h  partition.k.h
kernel/dev/storage/nvme/: nvme.c
kernel/dev/video/: fbdev.c  fbdev.h  fbdev.k.h
kernel/fs/: devtmpfs.c  devtmpfs.h  devtmpfs.k.h  ext2fs.c  ext2fs.h  ext2fs.k.h  fat32fs.c  fat32fs.h  fat32fs.k.h  initramfs.c  initramfs.k.h  tmpfs.c  tmpfs.h  tmpfs.k.h
kernel/fs/vfs/: vfs.c  vfs.h  vfs.k.h
kernel/ipc/: pipe.c  pipe.h  socket.c  socket.h  socket.k.h
kernel/ipc/socket/: tcp.c  tcp.h  tcp.k.h  udp.c  udp.h  udp.k.h  unix.c  unix.h  unix.k.h
kernel/lib/: alloc.c  alloc.h  alloc.k.h  bitmap.h  bitmap.k.h  debug.c  debug.h  debug.k.h  elf.c  elf.h  elf.k.h  errno.h  errno.k.h  event.c  event.h  event.k.h  hashmap.h  hashmap.k.h  libc.c  libc.h  libc.k.h  lock.c  lock.h  lock.k.h  misc.h  misc.k.h  panic.c  panic.h  panic.k.h  print.c  print.h  print.k.h  random.c  random.h  random.k.h  resource.c  resource.h  resource.k.h  trace.c  trace.h  (+3 more)
kernel/mm/: mmap.c  mmap.h  mmap.k.h  pmm.c  pmm.h  pmm.k.h  slab.c  slab.h  slab.k.h  vmm.c  vmm.h  vmm.k.h
kernel/sched/: proc.c  proc.h  proc.k.h  sched.c  sched.h  sched.k.h
kernel/sys/: cpu.c  cpu.h  cpu.k.h  except.c  except.h  except.k.h  gdt.c  gdt.h  gdt.k.h  idt.c  idt.h  idt.k.h  int_events.c  int_events.h  int_events.k.h  int_thunks.S  port.h  port.k.h  syscall.S  syscall.h  syscall.k.h  syscall_tab.S  timer.h
kernel/time/: time.c  time.h  time.k.h
patches/automake/: jinx-working-patch.patch
patches/bash/: jinx-working-patch.patch
patches/binutils/: jinx-working-patch.patch
patches/bpkg/: jinx-working-patch.patch
patches/fontconfig/: jinx-working-patch.patch
patches/gcc/: jinx-working-patch.patch
patches/gcc-host/: jinx-working-patch.patch
patches/glib/: jinx-working-patch.patch
patches/libgcrypt/: jinx-working-patch.patch
patches/libtool/: jinx-working-patch.patch
patches/libxfont2/: jinx-working-patch.patch
patches/libxshmfence/: jinx-working-patch.patch
patches/llvm/: jinx-working-patch.patch
patches/mesa/: jinx-working-patch.patch
patches/mlibc/: jinx-working-patch.patch
patches/ncurses/: jinx-working-patch.patch
patches/neofetch/: jinx-working-patch.patch
patches/openssl/: jinx-working-patch.patch
patches/readline/: jinx-working-patch.patch
patches/sdl2/: jinx-working-patch.patch
patches/xf86-input-mouse/: jinx-working-patch.patch
patches/xorg-proto/: jinx-working-patch.patch
patches/xorg-server/: jinx-working-patch.patch
patches/zlib/: jinx-working-patch.patch
recipes/: ace-of-penguins  at-spi2-atk  at-spi2-core  atk  bash  binutils  bpkg  bzip2  cairo  cglm  coreutils  curl  cwm  dbus  dejavu  dsda-doom  findutils  fontconfig  freeglut  freetype  fribidi  gawk  gcc  gdk-pixbuf  glib  glu  gmp  graphite2  grep  gsettings-desktop-schemas  gtk+-3  gzip  harfbuzz  icu  init  kernel  less  libarchive  libepoxy  libexpat  (+89 more)
source-recipes/: ace-of-penguins  autoconf-archive  automake  bash  binutils  bpkg  bzip2  cglm  cmake  coreutils  curl  cwm  cxxshim  findutils  fontconfig  freetype  frigg  gawk  gcc  gcc-host  glu  gnulib  grep  gzip  kernel  less  libarchive  libepoxy  libexpat  libffi  libfontenc  libgcrypt  libgmp  libgpg-error  libice  libintl  libpng  libsm  libtool  libunistring  (+64 more)
utils/: GNUmakefile  init.c  lfetch.c  memstat.c  socket-test.c
